tmux.config and .vimrc updates

--- a/docker_context/.tmux.conf
+++ b/docker_context/.tmux.conf
@@ -11,13 +11,8 @@ set -g bell-action any
 
 set -g status-bg blue
 set -g status-fg white
-set -g status-left-length 85
-set -g status-left '#[fg=yellow]#H '
-set-window-option -g window-status-current-style bg=magenta
-set-window-option -g window-status-style bg=blue
-
-# When at a status prompt, use vi bindings.
-set -g status-keys vi
+set -g status-left '#[fg=yellow]#H'
+set-window-option -g window-status-current-bg magenta
 
 # Set vi mode bindings.
 setw -g mode-keys vi
