--- a/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
+++ b/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
@@ -1,23 +1,27 @@
-FROM controller.trafficserver.org/ats/centos:8
+FROM ubuntu:20.04
 
 ARG username
 ARG userid
 ARG git_username
 ARG git_email
 
-RUN yum install -y glibc-locale-source glibc-langpack-en
-RUN localedef -i en_US -f UTF-8 en_US.UTF-8
+# So that installing pkg-config does not interactively prompt during the image
+# creation process.
+ARG DEBIAN_FRONTEND=noninteractive
 
-# Install openssl-quic
-RUN yum install -y python38-devel
-RUN alternatives --set python /usr/bin/python3.8
-RUN yum -y install libev-devel jemalloc-devel libxml2-devel \
-    c-ares-devel libevent-devel jansson-devel zlib-devel systemd-devel
-COPY /build_h3_tools.sh /var/tmp/build_h3_tools.sh
-RUN bash /var/tmp/build_h3_tools.sh
+# Packages for building Proxy Verifier and its dependencies.
+RUN apt-get update; \
+    apt-get install -y pipenv autoconf libtool pkg-config git
+
+# Install the library dependencies in /opt.
+WORKDIR /var/tmp
+RUN \
+    git clone https://github.com/yahoo/proxy-verifier.git; \
+    cd proxy-verifier; \
+    bash tools/build_library_dependencies.sh /opt
 
 # User-specific specifications.
-RUN yum install -y sudo vim the_silver_searcher tmux
+RUN apt-get install -y sudo vim silversearcher-ag tmux exuberant-ctags
 
 RUN useradd \
     --home-dir /home/$username \
@@ -33,15 +37,13 @@ WORKDIR /home/$username
 RUN mkdir -p bin
 
 COPY \
-    /build_ats \
-    /build_ats_not_quic \
-    /start_ats_project \
+    /start_proxy_verifier_project \
     /home/$username/bin/
 
 # Alas, COPY is not run as USER, and older docker version do not have --chown
 # for COPY.
 RUN \
-    sudo chown $username:nobody /home/$username/bin/*; \
+    sudo chown $username:nogroup /home/$username/bin/*; \
     chmod 755 /home/$username/bin/*
 
 COPY \
@@ -63,7 +65,7 @@ RUN mkdir .git_template
 COPY .git_template .git_template
 
 RUN \
-    sudo chown -R $username:nobody \
+    sudo chown -R $username:nogroup \
         .aliases \
         .bashrc \
         .editrc \
