context file updates

--- a/docker_context/.gitconfig
+++ b/docker_context/.gitconfig
@@ -22,8 +22,9 @@
 [merge]
     conflictstyle = diff3
 
-[http]
-    sslVersion = tlsv1.2
+# Hopefully this isn't needed anymore.
+#[http]
+#    sslVersion = tlsv1.2
 
 [checkout]
     defaultRemote = origin
