Adding gh-md-toc to Proxy Verifier images.

--- a/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
+++ b/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
@@ -38,6 +38,7 @@ RUN mkdir -p bin
 
 COPY \
     /start_proxy_verifier_project \
+    /gh-md-toc \
     /home/$username/bin/
 
 # Alas, COPY is not run as USER, and older docker version do not have --chown
