Adding git bisect clean_build_test

--- a/Dockerfiles/proxy-verifier/ubuntu/.tmux.conf
+++ b/Dockerfiles/proxy-verifier/ubuntu/.tmux.conf
@@ -9,6 +9,8 @@ set -g history-limit 50000
 # Listen for activity on all windows.
 set -g bell-action any
 
+set-option -g allow-rename off
+
 set -g status-bg blue
 set -g status-fg white
 set -g status-left '#[fg=yellow]#H '
