--- a/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
+++ b/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
@@ -20,6 +20,8 @@ RUN \
     cd proxy-verifier; \
     bash tools/build_library_dependencies.sh /opt
 
+RUN pip install --upgrade yapf autopep8 flake8 pylint
+
 # User-specific specifications.
 RUN apt-get install -y sudo vim silversearcher-ag tmux exuberant-ctags
 
@@ -55,12 +57,12 @@ COPY \
     .git-prompt.sh \
     .gitconfig \
     .inputrc \
+    .pylintrc \
     .tmux.conf \
     .vimrc \
     /home/$username/
 
 RUN mkdir .vim
-COPY .vim .vim
 
 RUN mkdir .git_template
 COPY .git_template .git_template
@@ -75,34 +77,19 @@ RUN \
         .gitconfig \
         .git_template \
         .inputrc \
+        .pylintrc \
         .tmux.conf \
         .vim \
         .vimrc
 
 
 WORKDIR .vim
-RUN mkdir bundle
-WORKDIR bundle
+RUN curl -fLo /home/$username/.vim/autoload/plug.vim --create-dirs \
+    https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
-# Check these out at specific revisions so things do not
-# change across new docker builds.
-RUN \
-    git clone https://github.com/dense-analysis/ale.git; \
-    cd ale; \
-    git checkout d81986a1; \
-    cd ../; \
-    git clone git://github.com/ntpeters/vim-better-whitespace.git; \
-    cd vim-better-whitespace; \
-    git checkout 8cf4b21; \
-    cd ../; \
-    git clone git://github.com/will133/vim-dirdiff; \
-    cd vim-dirdiff; \
-    git checkout 0191693; \
-    cd ../; \
-    git clone https://github.com/tpope/vim-fugitive.git; \
-    cd vim-fugitive; \
-    git checkout 8f4a23e; \
-    cd ../
+# Install the vim plugins.
+# Unfortunately, no one seems to be able to get this to work non-interactively.
+# RUN vim -E -s +PlugInstall +visual +qall
 
 WORKDIR /home/$username
 RUN  \
