--- a/docker_context/ubuntu/.tmux.conf
+++ b/docker_context/ubuntu/.tmux.conf
@@ -30,6 +30,9 @@ setw -g mode-keys vi
 #set -g mouse-select-window on
 #setw -g mode-mouse copy-mode
 
+# For neovim. Without this, exiting insert takes a painfully long time.
+set -sg escape-time 0
+
 # Reload the .tmux.conf
 unbind r
 bind r source-file ~/.tmux.conf
