--- a/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
+++ b/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
@@ -89,7 +89,7 @@ COPY \
     .vimrc \
     /home/$username/
 
-RUN mkdir .vim
+RUN mkdir -p .vim/swap
 
 RUN mkdir .git_template
 COPY .git_template .git_template
