--- a/Dockerfiles/alma_ats/Dockerfile
+++ b/Dockerfiles/alma_ats/Dockerfile
@@ -30,6 +30,7 @@ COPY \
     /build_ats_core \
     /build_ats_coverage \
     /build_ats_not_quic \
+    /build_ats_with_clang \
     /start_ats_project \
     /pretty_print_json \
     /home/$username/bin/
