--- a/Dockerfiles/ats/Dockerfile
+++ b/Dockerfiles/ats/Dockerfile
@@ -112,8 +112,8 @@ RUN \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 
 # Install the vim plugins.
-RUN nvim +'PlugInstall --sync' +qa
-RUN nvim +'CocInstall -sync coc-clangd coc-pyright coc-json coc-sh' +qall
+RUN nvim +'--headless PlugInstall --sync' +qa
+RUN nvim +'--headless CocInstall -sync coc-clangd coc-pyright coc-json coc-sh' +qall
 
 # Install the latest version of clang.
 RUN \
