Run clangd with -j=4.
I hope this doesn't suck up too much resources, but it will greatly
speed up the indexing of new projects.

--- a/Dockerfiles/alma_ats/Dockerfile
+++ b/Dockerfiles/alma_ats/Dockerfile
@@ -63,6 +63,7 @@ COPY .git_template .git_template
 
 RUN mkdir -p .config/nvim
 COPY init.vim .config/nvim
+COPY coc-settings.json .config/nvim
 
 RUN \
     sudo chown -R $username:nobody \
