--- a/Dockerfiles/ats_m1/Dockerfile
+++ b/Dockerfiles/ats_m1/Dockerfile
@@ -162,6 +162,7 @@ COPY \
     .inputrc \
     .pylintrc \
     .tmux.conf \
+    .tmux-completion.bash \
     .vimrc \
     /home/$username/
 
@@ -189,6 +190,7 @@ RUN \
         .inputrc \
         .pylintrc \
         .tmux.conf \
+        .tmux-completion.bash \
         .vim \
         .vimrc
 
