--- a/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
+++ b/Dockerfiles/proxy-verifier/ubuntu/Dockerfile
@@ -86,6 +86,7 @@ COPY \
     .inputrc \
     .pylintrc \
     .tmux.conf \
+    .tmux-completion.bash \
     .vimrc \
     /home/$username/
 
@@ -111,6 +112,7 @@ RUN \
         .inputrc \
         .pylintrc \
         .tmux.conf \
+        .tmux-completion.bash \
         .vim \
         .vimrc
 
