--- a/Dockerfiles/python/toy/Dockerfile
+++ b/Dockerfiles/python/toy/Dockerfile
@@ -63,6 +63,7 @@ COPY \
     .inputrc \
     .pylintrc \
     .tmux.conf \
+    .tmux-completion.bash \
     .vimrc \
     /home/$username/
 
@@ -88,6 +89,7 @@ RUN \
         .inputrc \
         .pylintrc \
         .tmux.conf \
+        .tmux-completion.bash \
         .vim \
         .vimrc
 
