set screen-256color for tmux

--- a/docker_context/rockylinux/.tmux.conf
+++ b/docker_context/rockylinux/.tmux.conf
@@ -32,3 +32,6 @@ set -sg escape-time 0
 # Reload the .tmux.conf
 unbind r
 bind r source-file ~/.tmux.conf
+
+# Make sure tmux sessions advertise color support.
+set -g default-terminal "screen-256color"
