--- a/Dockerfiles/ats/Dockerfile
+++ b/Dockerfiles/ats/Dockerfile
@@ -57,6 +57,7 @@ COPY \
     /build_ats_not_quic \
     /build_ats_with_clang \
     /cos \
+    /normalize_log \
     /start_ats_project \
     /pretty_print_json \
     /home/$username/bin/
