--- a/Dockerfiles/ats_m1/Dockerfile
+++ b/Dockerfiles/ats_m1/Dockerfile
@@ -136,6 +136,7 @@ WORKDIR /home/$username
 RUN mkdir -p bin
 
 COPY \
+    /bisect_with_autest \
     /build_ats \
     /clean_build_test \
     /build_ats_core \
