Fixed go installation.

--- a/Dockerfiles/ats_m1/Dockerfile
+++ b/Dockerfiles/ats_m1/Dockerfile
@@ -48,13 +48,7 @@ WORKDIR /root
 RUN echo 'PATH=/opt/bin:$PATH' | tee -a /etc/profile.d/curl_http3.sh
 
 RUN update-crypto-policies --set LEGACY
-RUN echo 'export GOROOT=/usr/local/go' | tee -a /etc/profile
-RUN echo 'export PATH=$PATH:/usr/local/go/bin' | tee -a /etc/profile
-RUN source /etc/profile
-RUN wget https://github.com/summerwind/h2spec/releases/download/v2.6.0/h2spec_linux_amd64.tar.gz
-RUN tar xf h2spec_linux_amd64.tar.gz
-RUN cp --force h2spec /usr/local/bin/h2spec
-RUN yum clean all
+
 
 # Add the CI's test user. N.B: 1200 is the uid that our jenkins user is
 # configured with, so that has to be used. Otherwise there will be permissions
@@ -123,10 +117,6 @@ RUN \
   cp src/quiche/target/release/libquiche.so /opt/quiche/lib && \
   cp src/quiche/quiche/include/quiche.h /opt/quiche/include && \
   cp src/quiche/target/release/quiche.pc /opt/quiche/lib/pkgconfig
-
-# Install go-httpbin
-RUN go install github.com/mccutchen/go-httpbin/v2/cmd/go-httpbin@v2.5.6
-RUN cp --force go/bin/go-httpbin /usr/local/bin/go-httpbin
 
 # My customization.
 RUN yum install -y glibc-locale-source glibc-langpack-en
@@ -299,3 +289,22 @@ RUN \
 
 RUN echo "source /opt/rh/gcc-toolset-11/enable" >> /home/$username/.zshrc
 RUN sudo chsh -s /usr/bin/zsh bneradt
+
+# Install a recent go and some go applications.
+WORKDIR /home/$username/src
+RUN sudo yum remove -y golang
+RUN echo 'export PATH=$PATH:/usr/local/go/bin' | sudo tee -a /etc/profile.d/go.sh
+RUN echo 'export GOBIN=/usr/local/go/bin' | sudo tee -a /etc/profile.d/go.sh
+RUN wget https://go.dev/dl/go1.20.1.linux-arm64.tar.gz
+RUN sudo rm -rf /usr/local/go && sudo tar -C /usr/local -xf go1.20.1.linux-arm64.tar.gz
+RUN ls -la /usr/local/go/bin/go
+
+RUN \
+  /usr/local/go/bin/go install github.com/summerwind/h2spec/cmd/h2spec@latest; \
+  sudo cp /home/$username/go/bin/h2spec /usr/local/go/bin/
+
+RUN \
+  /usr/local/go/bin/go install github.com/mccutchen/go-httpbin/v2/cmd/go-httpbin@v2.5.6; \
+  sudo cp /home/$username/go/bin/go-httpbin /usr/local/go/bin/
+
+WORKDIR /home/$username
